<resources>
    <string name="app_name">TUBESBagianIyan</string>
    <string name="myevent_text">myEVENT</string>
    <string name="exhibition_text">Exhibition</string>
    <string name="art_3">Art 3</string>
    <string name="text_alamat">Bale Tonggoh, Selasar Sunarya</string>
    <string name="text_tanggal">16 Oktober 2020</string>
    <string name="text_tiket">Ticket Left = 20</string>
    <string name="text_biaya">FREE ENTRY!</string>
    <string name="kumur_kumur">Kumur Kumur</string>
    <string name="text2_alamat">Galeri Soemardja ITB</string>
    <string name="text2_tanggal">22 Maret 2020</string>
    <string name="text2_tiket">Ticket Left = 2</string>
    <string name="text2_biaya">Rp.10.000,00</string>
    <string name="pameran_titik">Pameran Titik Tahun 2</string>
    <string name="text3_alamat">Padepokan Seni Maya Sunda</string>
    <string name="text3_tanggal">Februari 2020</string>
    <string name="text3_tiket">Available</string>
    <string name="text3_biaya">Free Entry!</string>
    <string name="text4_judul">Sakola</string>
    <string name="text4_alamat">Gedung PPK</string>
    <string name="text4_tanggal">5 Desember 2020</string>
    <string name="text4_tiket">Available</string>
    <string name="text4_biaya">Rp. 30.000,00</string>
    <string name="detail_event1">Pameran Titik Tahun 2</string>
    <string name="ad_firaous">by AD Firaous</string>
    <string name="feb">FEB</string>
    <string name="tanggal_28">28</string>
    <string name="padepokan_seni">Padepokan Seni Mayang</string>
    <string name="view_jam">12.00 WIB | Available</string>
    <string name="free_entry">Free Entry!</string>
    <string name="text_going">Going!</string>
    <string name="pameran_titik_2">Pameran Titik Tahun 2</string>
    <string name="ad_firaous_2">by AD Firaous</string>
    <string name="feb_2">FEB</string>
    <string name="tanggal_28_2">28</string>
    <string name="padepokan_seni_2">Padepokan Seni Mayang</string>
    <string name="jam_2">12.00 WIB | Available</string>
    <string name="free_entry_2">Free Entry!</string>
    <string name="bt_cancel">Cancel</string>
    <string name="going_event">Going To This Event?</string>
    <string name="cancel_text">Are Sure to Cancel?</string>
    <string name="going_popup">Going to This Event?</string>
    <string name="yes_text_cancel">Yes</string>
    <string name="no_text_cancel">No</string>
    <string name="allev_text">All Event</string>
    <string name="music_text">Music</string>
    <string name="edu_text">Education</string>
    <string name="art_text">Exhibition</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
</resources>
